# web_starter_template

./: .gitignore  README.md  pyproject.toml  requirements.txt
site_content/templates/html/: landing.html
tests/: test_baseapp.py  test_config.py  test_home.py  test_integration.py  test_render.py  test_urls.py
webapp/: config.py  urls.py  webapp.py
webapp/endpoint/: home.py
webapp/lib/: __init__.py  baseapp.py  render.py  request.py  response.py
